Fixed header on Safari

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -442,8 +442,8 @@ header {
     }
 
     a.logo img {
-      width: 60px;
-      height: 60px;
+      width: 125px;
+      height: 50px;
       min-width: unset;
       min-height: unset;
       margin-bottom: 0;
@@ -485,8 +485,7 @@ aside#status {
   }
 
   header {
-    margin: 20px 0 0 0;
-    top: 10px;
+    top: 0;
     box-shadow: var(--navy) 0px -20px 0px;
   }
 }
